# garmin-data-bridge

./: .gitignore  LICENSE  README.md  config.example.env  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-28-github-infrastructure.md
docs/superpowers/specs/: 2026-03-28-github-infrastructure-design.md
src/: auth.py  browser.py  config.py  parser.py  scraper.py  state.py  sync.py  uploader.py
src/parsers/: __init__.py  activities.py  body_battery.py  body_comp.py  daily.py  fitness.py  hrv.py  records.py  sleep.py  stress.py  vitals.py
systemd/: garmin-sync.service  garmin-sync.timer
tests/: test_config.py  test_parser.py  test_parsers_body_battery.py  test_parsers_body_comp.py  test_parsers_fitness.py  test_parsers_records.py  test_parsers_vitals.py  test_scraper.py  test_state.py  test_sync.py  test_uploader.py
tests/fixtures/: activities_response.json  body_battery_events_response.json  body_battery_response.json  body_comp_response.json  daily_summary_response.json  endurance_score_response.json  fitness_age_response.json  floors_response.json  heart_rate_response.json  hill_score_response.json  hrv_response.json  intensity_minutes_response.json  maxmet_response.json  personal_records_response.json  race_predictions_response.json  respiration_response.json  sleep_response.json  spo2_response.json  stress_response.json  training_readiness_response.json  training_status_response.json
