[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-data-bridge"
version = "1.0.0"
description = "Sync Garmin Connect health data to any webhook via browser automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "patchright>=1.58,<2",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8,<1",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "build>=1.0,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
